Tue Oct  3 11:38:34 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * modules/Creator.pm:
        * modules/ProjectCreator.pm:
        * modules/WorkspaceCreator.pm:

          Factored out the relative replacement code from the ProjectCreator
          into the Creator.  This required the addition of two template
          methods to get different sets of data for relative replacement to
          maintain the same functionality in the ProjectCreator and similar
          functionality in WorkspaceCreator.

        * modules/TemplateParser.pm:

          Fixed a bug where a previous scope of a foreach would hang around
          even when the scope went away.  This could cause strange results
          when nesting foreach's.

Tue Sep 26 21:02:46 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * docs/templates/bmake.txt:

          Documented the template variables used by the bmake template.

        * templates/automake.mpd:
        * templates/bmake.mpd:
        * templates/em3.mpd:
        * templates/make.mpd:
        * templates/nmake.mpd:
        * templates/vc6.mpd:
        * templates/vc7.mpd:
        * templates/vc7csharp.mpd:
        * templates/vc7vb.mpd:
        * templates/vc8.mpd:
        * templates/vc8csharp.mpd:

          If a custom definition has an 'output_option' set, the order of
          listing the input file changes such that it is listed before the
          output_option setting in the build rule.

Tue Sep 26 11:49:52 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * devtools/document_template.pl:

          Fixed bugs where complex foreach's (with functions) would not be
          recognized and default template variable values would be
          lowercased.

        * docs/README:

          Clarified the 'exclude' usage.

        * docs/USAGE:
        * docs/templates/cc.txt:
        * docs/templates/common.txt:
        * modules/CCProjectCreator.pm:
        * modules/CCWorkspaceCreator.pm: