@@ -1,3 +1,13 @@
+Wed Oct  4 17:08:21 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>
+
+        * modules/GHSWorkspaceCreator.pm:
+
+          For Integrity, a bsp file can not be added to the "Program"
+          project, it must be added to the "INTEGRITY Application" project.
+          So, for the ghs project type only, add .bsp files as documentation
+          in the project and the bsp documentation files will be added as bsp
+          files  when the integrate project is created.
+
 Tue Oct  3 11:38:34 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>
 
         * modules/Creator.pm:
